# Gmao

./: .gitignore  .replit  README.md  dashboard.py  docker-compose-ancien.yml  import_csv.py  init_db.sh  main.py  maintenance_scheduler.py  pyproject.toml  replit.md  run_all.sh  schema.sql  seed.sql  start.sh
import/: MATRICE.csv  Param.csv  SUIVI_CURATIF.csv  VIDANGE.csv
